--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <body>
     <header class="header">
         <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo">
+   <div>
+       <form class="trybewarts-login"> 
+        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="password" name="password" id="password" placeholder="Senha">
+        <div>
+            <button type="submit" id="btn">Entrar</button>
+        </div>
+      </form>
+   </div>
+        
     </header>
     <script src="script.js"></script>
 </body>
