--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
     <header class="header">
-        <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo">
-   <div>
-       <form class="trybewarts-login"> 
-        <input type="email" name="email" id="email" placeholder="Email">
-        <input type="password" name="password" id="password" placeholder="Senha">
-        <div>
-            <button type="submit" id="btn">Entrar</button>
+        <div class="trybewarts-header-logo">
+          <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo">
         </div>
-      </form>
-   </div>
-        
+        <h1 id="trybewarts-header-title">Trybewarts</h1>
+        <div>
+          <form class="trybewarts-login"> 
+            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="password" name="password" id="password" placeholder="Senha">
+            <button type="submit" id="btn">Entrar</button>
+          </form>
+        </div>
     </header>
     <script src="script.js"></script>
 </body>
