--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo">
         </div>
         <h1 id="trybewarts-header-title">Trybewarts</h1>
-        <div>
+        <div id="formBox">
           <form class="trybewarts-login"> 
             <input type="email" name="email" id="email" placeholder="Email">
             <input type="password" name="password" id="password" placeholder="Senha">
@@ -21,6 +21,9 @@
           </form>
         </div>
     </header>
+    <main>
+        <form id="evaluation-form"></form>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
