--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
     <main>
         <form id="evaluation-form"></form>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
     <script src="script.js"></script>
 </body>
