--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         </div>
     </header>
     <main>
-        <form id="evaluation-form"></form>
+        <form id="evaluation-form">
+            <input type="name" id="input-name" placeholder="Nome">
+            <input type="name" id="input-lastname" placeholder="Sobrenome">
+            <input type="email" id="input-email" placeholder="Email">
+        </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
     <script src="script.js"></script>
