--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     </header>
     <main>
         <form id="evaluation-form">
+          <div id="full-name">
             <input type="name" id="input-name" placeholder="Nome">
             <input type="name" id="input-lastname" placeholder="Sobrenome">
+          </div>
             <input type="email" id="input-email" placeholder="Email">
           <select name="" id="house">
             <option id="gitnoria-house" value="Gitnória">Gitnória</option>
