--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
             <input type="name" id="input-name" placeholder="Nome">
             <input type="name" id="input-lastname" placeholder="Sobrenome">
           </div>
-            <input type="email" id="input-email" placeholder="Email">
-          <select name="" id="house">
-            <option id="gitnoria-house" value="Gitnória">Gitnória</option>
-            <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
-            <option id="corvinode-house" value="Corvinode">Corvinode</option>
-            <option id="pytherina-house" value="Pytherina">Pytherina</option>
-          </select>
+          <div id="info">
+              <input type="email" id="input-email" placeholder="Email">
+              <select name="" id="house">
+                <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+                <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+                <option id="corvinode-house" value="Corvinode">Corvinode</option>
+                <option id="pytherina-house" value="Pytherina">Pytherina</option>
+              </select>
+          </div>
             
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
@@ -41,3 +43,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
