--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
                 <option id="pytherina-house" value="Pytherina">Pytherina</option>
               </select>
           </div>
-            
+          <label id="label-family" for="">Qual sua família?</label>
+              <label for="family1"> 
+                <input value ="Frontend" type="radio" name="family" id="family1"> Família Frontend
+              </label> 
+            <label for="family2" >
+              <input value ="Backend" type="radio" name="family" id="family2"> Família Backend
+            </label>
+           <label for="family3" >
+             <input value ="FullStack" type="radio" name="family" id="family3"> Família FullStack
+            </label> 
+         
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
