--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <option id="pytherina-house" value="Pytherina">Pytherina</option>
               </select>
           </div>
-          <label id="label-family" for="">Qual sua família?</label>
+          <label id="label-family">Qual sua família?</label>
               <label for="family1"> 
                 <input value ="Frontend" type="radio" name="family" id="family1"> Família Frontend
               </label> 
