--- a/index.html
+++ b/index.html
@@ -40,13 +40,31 @@
               <label for="family1"> 
                 <input value ="Frontend" type="radio" name="family" id="family1"> Família Frontend
               </label> 
-            <label for="family2" >
-              <input value ="Backend" type="radio" name="family" id="family2"> Família Backend
-            </label>
-           <label for="family3" >
-             <input value ="FullStack" type="radio" name="family" id="family3"> Família FullStack
-            </label> 
-         
+              <label for="family2" >
+                <input value ="Backend" type="radio" name="family" id="family2"> Família Backend
+              </label>
+              <label for="family3" >
+                <input value ="FullStack" type="radio" name="family" id="family3"> Família FullStack
+              </label> 
+          <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+              <label>
+                <input type="checkbox" value="HoFs">HoFs
+              </label>
+              <label>
+                <input type="checkbox" value="Jest">Jest
+              </label>
+              <label>
+                <input type="checkbox" value="Promises">Promises
+              </label>
+              <label>
+                <input type="checkbox" value="React">React
+              </label>
+              <label>
+                <input type="checkbox" value="SQL">SQL
+              </label>
+              <label>
+                <input type="checkbox" value="Python">Python
+              </label>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
