--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                   <input type="radio" value="10" name="rate">10
                 </label>
               </div>
-              
+              <section>
+                <label class="textarea" for="">Deixe seu comentário:
+                  <textarea name="" id="textarea" cols="40" rows="10" maxlength="500"></textarea>
+                </label>
+              </section>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
