--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                   <textarea name="" id="textarea" cols="40" rows="10" maxlength="500"></textarea>
                 </label>
               </section>
+            <section>
+              <label id="label-infos">Você concorda com o uso das informações acima?</label>
+              <input type="checkbox" id="agreement">
+            </section>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
