--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <h1 id="trybewarts-header-title">Trybewarts</h1>
         <div id="formBox">
-          <form class="trybewarts-login"> 
+          <form class="trybewarts-login">
             <input type="email" name="email" id="email" placeholder="Email">
             <input type="password" name="password" id="password" placeholder="Senha">
             <button type="submit" id="btn">Entrar</button>
@@ -37,15 +37,15 @@
               </select>
           </div>
           <label id="label-family">Qual sua família?</label>
-              <label for="family1"> 
+              <label for="family1">
                 <input value ="Frontend" type="radio" name="family" id="family1"> Família Frontend
-              </label> 
+              </label>
               <label for="family2" >
                 <input value ="Backend" type="radio" name="family" id="family2"> Família Backend
               </label>
               <label for="family3" >
                 <input value ="FullStack" type="radio" name="family" id="family3"> Família FullStack
-              </label> 
+              </label>
           <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
               <label>
                 <input type="checkbox" value="HoFs">HoFs
@@ -98,19 +98,19 @@
                 </label>
               </div>
               <section>
-                <label class="textarea" for="">Deixe seu comentário:
+                <label class="textarea" for="">Deixe seu comentário:</label>
+                  <div>
                   <textarea name="" id="textarea" cols="40" rows="10" maxlength="500"></textarea>
-                </label>
+                  </div>
               </section>
-            <section>
-              <label id="label-infos">Você concorda com o uso das informações acima?</label>
-              <input type="checkbox" id="agreement">
-            </section>
-            <button id="submit-btn" type="submit">Enviar</button>
+              <section>
+                <label id="label-infos">Você concorda com o uso das informações acima?</label>
+                <input type="checkbox" id="agreement">
+              </section>
+              <button id="submit-btn" type="submit" disabled>Enviar</button>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
     <script src="script.js"></script>
 </body>
 </html>
-
