--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
     </main>
+    <footer>
+      <p>Direitos reservados à Trybewarts© – Desenvolvido por Allana, Geovanna e Joice.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
