--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
               <section>
                 <label class="textarea" for="">Deixe seu comentário:</label>
                   <div>
-                  <textarea name="" id="textarea" cols="40" rows="10" maxlength="500"></textarea>
+                  <textarea name="" id="textarea" cols="40" rows="10" maxlength="500" oninput="counter()" ></textarea>
+                  <label for="characters" id="counter">500</label>
                   </div>
               </section>
               <section>
@@ -117,3 +118,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!---->
