--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
               </label>
           <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
               <label>
-                <input type="checkbox" value="HoFs">HoFs
+                <input type="checkbox" value="HoFs" class="subject" name="subject">HoFs
               </label>
               <label>
-                <input type="checkbox" value="Jest">Jest
+                <input type="checkbox" value="Jest" class="subject" name="subject">Jest
               </label>
               <label>
-                <input type="checkbox" value="Promises">Promises
+                <input type="checkbox" value="Promises" class="subject" name="subject">Promises
               </label>
               <label>
-                <input type="checkbox" value="React">React
+                <input type="checkbox" value="React" class="subject" name="subject">React
               </label>
               <label>
-                <input type="checkbox" value="SQL">SQL
+                <input type="checkbox" value="SQL" class="subject" name="subject">SQL
               </label>
               <label>
-                <input type="checkbox" value="Python">Python
+                <input type="checkbox" value="Python" class="subject" name="subject">Python
               </label>
               <div id="rates">
                 <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
